# riksdagen

./: .gitignore  CLAUDE.md  Makefile
frontend/: CLAUDE.md  index.html  package.json  vite.config.ts
frontend/src/: App.module.css  App.test.tsx  App.tsx  CellTooltip.module.css  CellTooltip.test.tsx  CellTooltip.tsx  ColorByToggle.module.css  ColorByToggle.test.tsx  ColorByToggle.tsx  HexGrid.module.css  HexGrid.test.tsx  HexGrid.tsx  colorMap.test.ts  colorMap.ts  types.ts  useGridData.ts
pipeline/: config.yaml  pyproject.toml
pipeline/riksdagen/: __main__.py  config.py  export.py  load.py  som.py  vectors.py
pipeline/tests/: test_cli.py  test_config.py  test_export.py  test_load.py  test_som.py  test_vectors.py
pipeline/tests/data/: person.csv  votering_new.csv  votering_new_bom.csv  votering_old.csv
