[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["riksdagen"]

[project]
name = "riksdagen-pipeline"
version = "0.1.0"
description = "Data pipeline for Swedish parliament (Riksdagen) open data"
requires-python = ">=3.10"
dependencies = [
    "polars>=1.0",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "mypy>=1.0",
    "pytest>=8.0",
    "ruff>=0.5",
    "types-pyyaml>=6.0.12.20260518",
]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
strict = true
python_version = "3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
